src/gpu_handle/snapshots/amdgpu_sysfs__gpu_handle__power_profile_mode__tests__parse_full_internal_4800h.snap
---
source: src/gpu_handle/power_profile_mode.rs
expression: table
---
modes:
  1: 3D_FULL_SCREEN
  3: VIDEO
  4: VR
  5: COMPUTE
  6: CUSTOM
active: 3

