src/gpu_handle/snapshots/amdgpu_sysfs__gpu_handle__power_profile_mode__tests__parse_full_rx6900xt.snap
---
source: src/gpu_handle/power_profile_mode.rs
expression: table
---
modes:
  0:
    name: BOOTUP_DEFAULT
    values:
      - clock_type: GFXCLK
        values:
          - 0
          - 5
          - 1
          - 0
          - 4
          - 800
          - 4587520
          - -65536
          - 0
      - clock_type: SOCCLK
        values:
          - 0
          - 5
          - 1
          - 0
          - 1
          - 0
          - 3276800
          - -65536
          - -6553
      - clock_type: MEMLK
        values:
          - 0
          - 5
          - 1
          - 0
          - 4
          - 800
          - 327680
          - -65536
          - 0
  1:
    name: 3D_FULL_SCREEN
    values:
      - clock_type: GFXCLK
        values:
          - 0
          - 5
          - 0
          - 1600
          - 4
          - 650
          - 5242880
          - -3276
          - 0
      - clock_type: SOCCLK
        values:
          - 0
          - 5
          - 1
          - 0
          - 1
          - 0
          - 655360
          - -65536
          - -6553
      - clock_type: MEMLK
        values:
          - 0
          - 5
          - 4
          - 850
          - 4
          - 800
          - 327680
          - -65536
          - 0
  2:
    name: POWER_SAVING
    values:
      - clock_type: GFXCLK
        values:
          - 0
          - 5
          - 1
          - 0
          - 3
          - 0
          - 5898240
          - -65536
          - 0
      - clock_type: SOCCLK
        values:
          - 0
          - 5
          - 1
          - 0
          - 1
          - 0
          - 3407872
          - -65536
          - -6553
      - clock_type: MEMLK
        values:
          - 0
          - 5
          - 1
          - 0
          - 3
          - 0
          - 1966080
          - -65536
          - 0
  3:
    name: VIDEO
    values:
      - clock_type: GFXCLK
        values:
          - 0
          - 5
          - 1
          - 0
          - 4
          - 500
          - 4587520
          - -65536
          - 0
      - clock_type: SOCCLK
        values:
          - 0
          - 5
          - 1
          - 0
          - 1
          - 0
          - 3473408
          - -65536
          - -6553
      - clock_type: MEMLK
        values:
          - 0
          - 5
          - 1
          - 0
          - 4
          - 500
          - 1966080
          - -65536
          - 0
  4:
    name: VR
    values:
      - clock_type: GFXCLK
        values:
          - 0
          - 5
          - 4
          - 1000
          - 1
          - 0
          - 3276800
          - 0
          - 0
      - clock_type: SOCCLK
        values:
          - 0
          - 5
          - 1
          - 0
          - 1
          - 0
          - 655360
          - -65536
          - -6553
      - clock_type: MEMLK
        values:
          - 0
          - 5
          - 1
          - 0
          - 4
          - 800
          - 327680
          - -65536
          - 0
  5:
    name: COMPUTE
    values:
      - clock_type: GFXCLK
        values:
          - 0
          - 5
          - 4
          - 1000
          - 1
          - 0
          - 3932160
          - 0
          - 0
      - clock_type: SOCCLK
        values:
          - 0
          - 5
          - 1
          - 0
          - 1
          - 0
          - 655360
          - -65536
          - -6553
      - clock_type: MEMLK
        values:
          - 0
          - 5
          - 4
          - 850
          - 3
          - 0
          - 327680
          - -65536
          - -32768
  6:
    name: CUSTOM
    values:
      - clock_type: GFXCLK
        values:
          - 0
          - 5
          - 1
          - 0
          - 4
          - 800
          - 4587520
          - -65536
          - 0
      - clock_type: SOCCLK
        values:
          - 0
          - 5
          - 1
          - 0
          - 1
          - 0
          - 3276800
          - -65536
          - -6553
      - clock_type: MEMLK
        values:
          - 0
          - 5
          - 1
          - 0
          - 4
          - 800
          - 327680
          - -65536
          - 0
value_names:
  - FPS
  - MinFreqType
  - MinActiveFreqType
  - MinActiveFreq
  - BoosterFreqType
  - BoosterFreq
  - PD_Data_limit_c
  - PD_Data_error_coeff
  - PD_Data_error_rate_coeff
active: 0
